--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <!-- 네이버 지도 API 스크립트 추가 -->
+    <script type="text/javascript" src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=pfx4scf0lr&submodules=geocoder"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
