--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
     -->
     <title>React App</title>
   </head>
+  <script
+  type="text/javascript"
+  src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=pfx4scf0lr&submodules=geocoder"
+></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
