--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ZUUM</title>
+    <title>ZU_UM</title>
 
     <!-- 네이버 지도 API 스크립트 추가 -->
     <!-- <script type="text/javascript" src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=pfx4scf0lr&submodules=geocoder"></script> -->
