--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
   </head>
   <script
   type="text/javascript"
-  src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=12q9g71ie6&submodules=geocoder"
+  src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=pfx4scf0lr&submodules=geocoder"
 ></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
